--- a/roles/k3s/templates/k3s.agent.service.j2
+++ b/roles/k3s/templates/k3s.agent.service.j2
@@ -7,7 +7,7 @@ After=network-online.target
 Type=notify
 ExecStartPre=-/sbin/modprobe br_netfilter
 ExecStartPre=-/sbin/modprobe overlay
-ExecStart=/usr/local/bin/k3s agent --server https://{{ k3s_server_ip }}:6443 --token {{ hostvars[groups['k3s_server'][0]]['token'] }}
+ExecStart=/usr/local/bin/k3s agent --server https://{{ k3s_server_ip }}:6443 --token {{ k3s_server_token }} {{ extra_agent_args | default([]) | join(" ") }}
 KillMode=process
 Delegate=yes
 # Having non-zero Limit*s causes performance problems due to accounting overhead
