--- a/roles/k3s/templates/k3s.server.service.j2
+++ b/roles/k3s/templates/k3s.server.service.j2
@@ -7,7 +7,7 @@ After=network-online.target
 Type=notify
 ExecStartPre=-/sbin/modprobe br_netfilter
 ExecStartPre=-/sbin/modprobe overlay
-ExecStart=/usr/local/bin/k3s server --tls-san {{ k3s_server_ip }} {{ extra_server_args | default("") }}
+ExecStart=/usr/local/bin/k3s server --tls-san {{ k3s_server_ip }} {{ extra_server_args | default([]) | join(" ") }}
 KillMode=process
 Delegate=yes
 # Having non-zero Limit*s causes performance problems due to accounting overhead
